# ktcat

./: .gitignore  .taplo.toml  AGENTS.md  Makefile  README.md  pyproject.toml
src/ktcat/: __init__.py  __main__.py
tests/: test_ktcat.py
